# dosbox-staging

./: .gitignore  CMakeLists.txt  debug_trace_upstream_vs_fork.patch  dosbox-staging.conf  meson.build
build_check/: CMakeCache.txt
build_check/include/: dosbox_config.h
docs/: AGENT_RE.md  CONTROL_SOCKET.md  DEBUG_OVERLAY.md  DEBUG_TRACE.md
extras/scripts/: control_socket_client.py
scripts/tools/: memory_dump_solution.py
src/: CMakeLists.txt  dosbox.cpp  dosbox_config.h.in.cmake  main.cpp
src/capture/: capture.cpp  capture.h
src/control/: CMakeLists.txt  control_socket.cpp  control_socket.h  meson.build
src/cpu/: core_normal.cpp  core_prefetch.cpp  core_simple.cpp  paging.h
src/cpu/core_normal/: prefix_none.h
src/debug_trace/: CMakeLists.txt  agent_re.cpp  agent_re.h  cpu_backlog.cpp  cpu_backlog.h  exec_logger.cpp  exec_logger.h  file_io_logger.cpp  file_io_logger.h  game_trace.cpp  game_trace.h  insn_length.cpp  insn_length.h  instruction_logger.cpp  instruction_logger.h  interrupt_logger.cpp  interrupt_logger.h  mem_dump.cpp  mem_dump.h  meson.build  opcode_dump.cpp  opcode_dump.h  screen_dump.cpp  screen_dump.h  video_mode_logger.cpp  video_mode_logger.h
src/dos/: dos.cpp
src/gui/: CMakeLists.txt  debug_overlay.cpp  debug_overlay.h  meson.build  sdl_gui.cpp
src/gui/private/: common.h
src/gui/render/: opengl_renderer.cpp  sdl_renderer.cpp
src/ints/: int10.cpp
src/libs/decoders/: CMakeLists.txt  SDL_sound.c
src/shell/: shell.cpp  shell.h
